fixed hero image stretching

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -6,7 +6,6 @@ body{
 
 /* Background */
 .container {
-      
       width: 100%;
       height: 1000px;
       background-position: center;
@@ -60,6 +59,7 @@ li {
       width:100%;
       height: 1000px;
       display: flex;
+      object-fit: cover;
       
 }
 
